--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,13 @@ ul {
   display: block;
 }
 /* GERAIS */
+body::-webkit-scrollbar {
+  width: 8px;
+}
+body::-webkit-scrollbar-thumb {
+  background: #ff9800;
+  border-radius: 10px;
+}
 body {
   background-color: #212121;
   font-family: 'OpenSans' !important;
@@ -93,8 +100,8 @@ body {
 .main-container {
   max-width: 1120px;
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -118,6 +125,108 @@ body {
   bottom: -5px;
   right: 0;
 }
+/* MENU RESPONSIVE */
+.menu-responsive {
+  position: fixed;
+  right: -290px;
+  max-width: 290px;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  -webkit-transition: 0.25s transform;
+  height: 100vh;
+  top: 0;
+  padding: 60px 45px 25px;
+  z-index: 999;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+.menu-responsive .fechar {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  cursor: pointer;
+}
+.menu-responsive .fechar svg {
+  fill: #00347c;
+  -webkit-transition: 0.22s;
+  width: 19px;
+  height: 19px;
+}
+.menu-responsive .fechar svg:hover {
+  stroke: #333333;
+  transition: 0.15s;
+}
+.menu-responsive .nav-menu {
+  text-align: left;
+  margin-bottom: 30px;
+}
+.menu-responsive .nav-menu ul li {
+  margin-bottom: 15px;
+}
+.menu-responsive .nav-menu ul li a {
+  color: #00347c;
+  font-size: 15px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.menu-responsive .nav-menu ul li.active {
+  color: #003651;
+}
+.menu-container {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.full-page.active {
+  display: block;
+}
+.full-page {
+  content: "";
+  background-color: rgba(0, 0, 0, 0.38);
+  width: 1920px;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  min-height: 100vh;
+  display: none;
+  z-index: 1;
+  cursor: pointer;
+}
+.menu-responsive.active {
+  transform: translateX(-100%);
+  transition: 0.15s;
+  -webkit-box-shadow: 9px 0 88px -15px rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 9px 0 88px -15px rgba(0, 0, 0, 0.19);
+  box-shadow: 9px 0 88px -15px rgba(0, 0, 0, 0.19);
+}
+.menu-responsive::-webkit-scrollbar {
+  width: 4px;
+}
+.menu-responsive::-webkit-scrollbar-thumb {
+  background: #003651;
+  border-radius: 10px;
+}
+.menu-responsive::-webkit-scrollbar-thumb:hover {
+  background: #003651;
+}
+.block-bar {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 37px;
+  cursor: pointer;
+}
+.block-bar div {
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  margin-bottom: 5px;
+}
+/* SECTIONS */
 header {
   padding-top: 52px;
 }
@@ -219,12 +328,13 @@ header .menu ul a:hover {
 }
 .section-flex #idiomas .content-idiomas {
   display: flex;
-}
-.section-flex #idiomas .content-idiomas .info-idioma + .info-idioma {
-  margin-left: 40px;
+  /*            .info-idioma + .info-idioma {
+                margin-left: 40px;
+            }*/
 }
 .section-flex #idiomas .info-idioma {
   display: flex;
+  margin: 20px;
 }
 .section-flex #idiomas .info-idioma p {
   color: #FAFAFA;
@@ -251,8 +361,8 @@ header .menu ul a:hover {
   border: 2px solid #FF9800;
   box-sizing: border-box;
   border-radius: 16px;
-  padding: 24px;
   width: 100%;
+  padding: 24px 24px;
 }
 #experiencia .acc h4 {
   font-size: 16px;
@@ -267,175 +377,70 @@ header .menu ul a:hover {
   font-size: 16px;
   font-weight: 400;
   color: #FAFAFA;
+  margin: 0;
 }
-#about {
-  padding-top: 80px;
-}
-#about .image {
-  max-width: 300px;
-  width: 100%;
-  height: 300px;
-  margin-right: 30px;
-}
-#about .image .photo {
-  width: 100%;
-  height: inherit;
-  object-fit: cover;
-  object-position: center center;
-  border-radius: 100%;
-}
-#about .container {
+#experiencia .acc .click-area {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  /*            padding-bottom: 24px;*/
 }
-#about .bottom-footer {
-  display: flex;
+#experiencia .acc .click-area svg {
+  height: auto;
 }
-#about .midias {
+#experiencia .acc .content-experience {
+  padding-top: 24px;
+}
+#experiencia .acc.active .click-area svg {
+  transform: rotate(180deg);
+}
+#experiencia .acc + .acc {
+  margin-top: 24px;
+}
+#portfolio {
+  padding-top: 60px;
+}
+#portfolio p {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fafafa;
+  margin-top: 5px;
+}
+#portfolio .owl-theme .owl-nav {
+  margin-top: 10px;
+}
+#portfolio .owl-theme .owl-nav img {
+  width: 30px;
+  height: 30px;
+}
+#portfolio a:hover p {
+  color: #ff9800;
+}
+footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+footer .main-container {
   display: flex;
   justify-content: flex-end;
 }
-#about .midias a + a {
-  margin-left: 28px;
+footer a {
+  font-size: 16px;
+  color: #FAFAFA;
 }
-#about .midias a {
-  display: block;
-  border-radius: 5px;
-}
-#about .midias a svg {
-  fill: #fff;
-}
-#about .midias a:hover svg {
-  fill: #fe7c00;
-}
-/*#knowledges {
-    padding-top: 80px;
-
-    .box {
-        background-color: #eeeeee;
-        color: #000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: calc(50% - 10px);
-        margin-top: 20px;
-        border-radius: 10px;
-        min-height: 100px;
-
-        h2 {
-            margin: 0;
-        }
-
-        .logo {
-            margin-right: 10px;
-        }
-    }
-
-    text-align: center;
-
-    .content {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-}*/
-/*#experience {
-    padding-top: 80px;
-
-    .acc {
-        margin-bottom: 15px;
-        background-color: rgb(230,230,230);
-        border-radius: 10px;
-        color: #000;
-
-        .click-area {
-            display: flex;
-            align-items: center;
-            background-color: rgb(230,230,230);
-            padding: 10px;
-            border-radius: 10px;
-
-
-            h4 {
-                margin: 0;
-            }
-
-            svg {
-                stroke: #fe7c00;
-                margin-right: 15px;
-            }
-        }
-
-        .content-experience {
-            background-color: rgb(230,230,230);
-            padding: 25px;
-            margin-top: 10px;
-            border-radius: 10px;
-        }
-    }
-}*/
-#portfolio {
-  padding-top: 80px;
-}
-#portfolio .box-site {
-  background-color: #e6e6e6;
-  border-radius: 10px;
-  max-width: 350px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px 10px 15px;
-}
-#portfolio .box-site .image {
-  max-width: 300px;
-  width: 100%;
-  height: 170px;
-}
-#portfolio .box-site .image img {
-  width: 100%;
-  height: inherit;
-  object-fit: contain;
-  overflow: hidden;
-}
-#portfolio .box-site .text {
-  color: #000;
-}
-#portfolio .box-site:hover .image img {
-  transform: scale(1.1);
-}
-#portfolio .box-site:hover .text {
-  color: #fe7c00;
-  font-size: 18px;
-}
-footer {
-  padding-top: 80px;
-}
-footer .voltar {
-  display: flex;
-  justify-content: center;
-  border-bottom: 1px solid #ffffff;
-  margin-bottom: 31px;
-}
-footer .voltar a {
-  display: block;
-  color: #fafafa;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 1.4px;
-  text-transform: uppercase;
-  padding-bottom: 21px;
-}
-footer .voltar a svg {
-  margin-left: 21px;
+footer a svg {
+  margin-left: 18px;
   fill: #fafafa;
 }
-footer .voltar a:hover {
-  color: #fe7c00;
+footer a:hover {
+  color: #ff9800;
 }
-footer .voltar a:hover svg {
-  fill: #fe7c00;
+footer a:hover svg {
+  fill: #ff9800;
 }
+/* CARD CONHECIMENTOS*/
 #card {
   max-width: 100%;
   perspective: 1000px;
@@ -491,4 +496,71 @@ footer .voltar a:hover svg {
   flex-direction: column;
   align-items: center;
   border: 2px solid #FF9800;
+}
+/* RESPONSIVE */
+@media only screen and (max-width: 1100px) {
+  #card,
+  #flip-card {
+    width: 156px;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .block-bar {
+    display: flex;
+  }
+  header .menu {
+    display: none;
+  }
+  #sobre .main-container {
+    flex-direction: column;
+  }
+  #sobre h1 {
+    font-size: 38px;
+  }
+  #sobre h1 span {
+    font-weight: 700;
+  }
+  #sobre .infos {
+    text-align: center;
+    margin-top: 20px;
+  }
+  #sobre .infos .texto {
+    text-align: justify;
+  }
+  #sobre .image {
+    max-width: 323px;
+    height: 323px;
+  }
+  #conhecimentos .content-conhecimentos {
+    flex-direction: column;
+    align-items: center;
+  }
+  #conhecimentos .content-conhecimentos .mobile + .mobile {
+    margin-left: 0;
+    margin-top: 24px;
+  }
+  .section-flex .main-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .section-flex #idiomas {
+    width: 100%;
+  }
+  .section-flex #idiomas .content-idiomas {
+    display: flex;
+    flex-wrap: wrap;
+    /*            .info-idioma + .info-idioma {
+                margin-left: 0;
+            }*/
+  }
+  .section-flex #idiomas .info-idioma {
+    margin: 20px;
+  }
+  .section-flex #hobbies {
+    width: 100%;
+    padding-top: 20px;
+  }
+  footer .main-container {
+    justify-content: center;
+  }
 }
