--- a/styles/main.less
+++ b/styles/main.less
@@ -30,6 +30,16 @@ ul {
 
 
 /* GERAIS */
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: rgba(255,152,0,1);
+    border-radius: 10px;
+}
+
 body {
     background-color: #212121;
     font-family: 'OpenSans' !important;
@@ -38,12 +48,11 @@ body {
 .main-container {
     max-width: 1120px;
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
     margin-left: auto;
     margin-right: auto;
 }
-
 
 .titulo-section {
     margin-bottom: 32px;
@@ -68,6 +77,129 @@ body {
     }
 }
 
+
+/* MENU RESPONSIVE */
+
+.menu-responsive {
+    position: fixed;
+    right: -290px;
+    max-width: 290px;
+    width: 100%;
+    background-color: rgba(255,255, 255, 0.98);
+    -webkit-transition: .25s transform;
+    height: 100vh;
+    top: 0;
+    padding: 60px 45px 25px;
+    z-index: 999;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+
+    .fechar {
+        position: absolute;
+        top: 15px;
+        right: 20px;
+        cursor: pointer;
+
+        svg {
+            fill: #00347c;
+            -webkit-transition: 0.22s;
+            width: 19px;
+            height: 19px;
+        }
+
+        svg:hover {
+            stroke: #333333;
+            transition: 0.15s;
+        }
+    }
+
+    .nav-menu {
+        text-align: left;
+        margin-bottom: 30px;
+
+        ul {
+            li {
+                margin-bottom: 15px;
+
+                a {
+                    color: #00347c;
+                    font-size: 15px;
+                    font-weight: 400;
+                    text-transform: uppercase;
+                }
+            }
+
+            li.active {
+                color: #003651;
+            }
+        }
+    }
+}
+
+.menu-container {
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.full-page.active {
+    display: block;
+}
+
+.full-page {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.38);
+    width: 1920px;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    min-height: 100vh;
+    display: none;
+    z-index: 1;
+    cursor: pointer;
+}
+
+.menu-responsive.active {
+    transform: translateX(-100%);
+    transition: 0.15s;
+    -webkit-box-shadow: 9px 0 88px -15px rgba(0,0,0,.19);
+    -moz-box-shadow: 9px 0 88px -15px rgba(0,0,0,.19);
+    box-shadow: 9px 0 88px -15px rgba(0,0,0,.19);
+}
+
+.menu-responsive::-webkit-scrollbar {
+    width: 4px;
+}
+
+.menu-responsive::-webkit-scrollbar-thumb {
+    background: #003651;
+    border-radius: 10px;
+}
+
+.menu-responsive::-webkit-scrollbar-thumb:hover {
+    background: #003651;
+}
+
+.block-bar {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 37px;
+    cursor: pointer;
+
+    div {
+        width: 100%;
+        height: 2px;
+        background-color: #fff;
+        margin-bottom: 5px;
+    }
+}
+
+/* SECTIONS */
 
 header {
     padding-top: 52px;
@@ -103,7 +235,6 @@ header {
         }
     }
 }
-
 
 #sobre {
     padding-top: 60px;
@@ -173,7 +304,6 @@ header {
     }
 }
 
-
 #conhecimentos {
     padding-top: 80px;
 
@@ -207,14 +337,14 @@ header {
 
         .content-idiomas {
             display: flex;
-
-            .info-idioma + .info-idioma {
+            /*            .info-idioma + .info-idioma {
                 margin-left: 40px;
-            }
+            }*/
         }
 
         .info-idioma {
             display: flex;
+            margin: 20px;
 
             p {
                 color: #FAFAFA;
@@ -250,8 +380,8 @@ header {
         border: 2px solid #FF9800;
         box-sizing: border-box;
         border-radius: 16px;
-        padding: 24px;
         width: 100%;
+        padding: 24px 24px;
 
         h4 {
             font-size: 16px;
@@ -270,263 +400,99 @@ header {
             font-size: 16px;
             font-weight: 400;
             color: #FAFAFA;
-        }
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#about {
-    padding-top: 80px;
-
-    .image {
-        max-width: 300px;
-        width: 100%;
-        height: 300px;
-        margin-right: 30px;
-
-
-        .photo {
-            width: 100%;
-            height: inherit;
-            object-fit: cover;
-            object-position: center center;
-            border-radius: 100%;
-        }
-    }
-
-    .container {
-        display: flex;
-        justify-content: center;
-    }
-
-    .bottom-footer {
-        display: flex;
-    }
-
-    .midias {
-        display: flex;
-        justify-content: flex-end;
-
-
-        a + a {
-            margin-left: 28px;
-        }
-
-        a {
-            display: block;
-            border-radius: 5px;
-
-            svg {
-                fill: #fff;
-            }
-        }
-
-        a:hover {
-            svg {
-                fill: #fe7c00;
-            }
-        }
-    }
-}
-
-
-
-/*#knowledges {
-    padding-top: 80px;
-
-    .box {
-        background-color: #eeeeee;
-        color: #000;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: calc(50% - 10px);
-        margin-top: 20px;
-        border-radius: 10px;
-        min-height: 100px;
-
-        h2 {
             margin: 0;
         }
 
-        .logo {
-            margin-right: 10px;
-        }
-    }
-
-    text-align: center;
-
-    .content {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-}*/
-
-/*#experience {
-    padding-top: 80px;
-
-    .acc {
-        margin-bottom: 15px;
-        background-color: rgb(230,230,230);
-        border-radius: 10px;
-        color: #000;
 
         .click-area {
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            background-color: rgb(230,230,230);
-            padding: 10px;
-            border-radius: 10px;
-
-
-            h4 {
-                margin: 0;
-            }
-
+            /*            padding-bottom: 24px;*/
             svg {
-                stroke: #fe7c00;
-                margin-right: 15px;
+                height: auto;
             }
         }
 
         .content-experience {
-            background-color: rgb(230,230,230);
-            padding: 25px;
-            margin-top: 10px;
-            border-radius: 10px;
+            padding-top: 24px;
         }
     }
-}*/
+
+    .acc.active {
+        .click-area {
+            svg {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    .acc + .acc {
+        margin-top: 24px;
+    }
+}
 
 #portfolio {
-    padding-top: 80px;
+    padding-top: 60px;
 
-    .box-site {
-        background-color: rgb(230,230,230);
-        border-radius: 10px;
-        max-width: 350px;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 10px 10px 15px;
+    p {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 24px;
+        color: #fafafa;
+        margin-top: 5px;
+    }
 
-        .image {
-            max-width: 300px;
-            width: 100%;
-            height: 170px;
-
+    .owl-theme {
+        .owl-nav {
+            margin-top: 10px;
 
             img {
-                width: 100%;
-                height: inherit;
-                object-fit: contain;
-                overflow: hidden;
+                width: 30px;
+                height: 30px;
             }
-        }
-
-        .text {
-            color: #000;
         }
     }
 
-    .box-site:hover {
-        .image {
 
-
-            img {
-                transform: scale(1.1);
-            }
-        }
-
-        .text {
-            color: #fe7c00;
-            font-size: 18px;
+    a:hover {
+        p{
+            color: rgba(255,152,0,1);
         }
     }
 }
-
 
 footer {
-    padding-top: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 
-    .voltar {
+    .main-container {
         display: flex;
-        justify-content: center;
-        border-bottom: 1px solid #ffffff;
-        margin-bottom: 31px;
+        justify-content: flex-end;
+    }
 
-        a {
-            display: block;
-            color: #fafafa;
-            font-size: 14px;
-            font-weight: 500;
-            letter-spacing: 1.4px;
-            text-transform: uppercase;
-            padding-bottom: 21px;
+    a {
+        font-size: 16px;
+        color: #FAFAFA;
 
-            svg {
-                margin-left: 21px;
-                fill: #fafafa;
-            }
+        svg {
+            margin-left: 18px;
+            fill: #fafafa;
         }
+    }
 
-        a:hover {
-            color: #fe7c00;
+    a:hover {
+        color: rgba(255,152,0,1);
 
-            svg {
-                fill: #fe7c00;
-            }
+        svg {
+            fill: rgba(255,152,0,1);
         }
     }
 }
 
 
-
-
+/* CARD CONHECIMENTOS*/
 
 #card {
     max-width: 100%;
@@ -587,4 +553,20 @@ footer {
     flex-direction: column;
     align-items: center;
     border: 2px solid #FF9800;
+}
+
+
+
+/* RESPONSIVE */
+
+
+
+@media only screen and (max-width: 1100px){
+    #card, #flip-card {
+        width: 156px;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    @import "responsive/1024";
 }
